# agentic-ai-startup-simulator

myproject/: README.md  app.py  crew_logic.py  db.py  pyproject.toml  report.md  requirements.txt
myproject/src/myproject/: crew.py  main.py
myproject/src/myproject/config/: tasks.yaml
