[project]
name = "myproject"
version = "0.1.0"
description = "myproject using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5"
]

[project.scripts]
myproject = "myproject.main:run"
run_crew = "myproject.main:run"
train = "myproject.main:train"
replay = "myproject.main:replay"
test = "myproject.main:test"
run_with_trigger = "myproject.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
